add_tabella_spese

--- a/index.html
+++ b/index.html
@@ -17,5 +17,46 @@
         </div>
     </header>
     <hr>
+    <body>
+        <!--sezione spese-->
+        <section>
+            <h2>Le mie spese</h2>
+            <!--tabella spese-->
+            <table>
+                <thead>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+        <hr>
+    </body>
 </body>
 </html>
