--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
             </table>
         </section>
         <hr>
+        <!--sezione cose da fare-->
+        <section>
+            <h2>Cose da fare</h2>
+            <!--lista cose da fare-->
+            <ul>
+                <li>Visitare la Tower of London &#10008;</li>
+                <li>Visitare greenwich &#10004;</li>
+                <li>VAscoltere un artista di strada a Covent Garden &#10004;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+            </ul>
+        </section>
+        <hr>
     </body>
 </body>
 </html>
