add_lista_info_utili

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
         </div>
     </header>
     <hr>
-    <body>
+    <main>
         <!--sezione spese-->
         <section>
             <h2>Le mie spese</h2>
             <!--tabella spese-->
             <table>
                 <thead>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
                 </thead>
 
                 <tbody>
@@ -69,6 +71,36 @@
             </ul>
         </section>
         <hr>
-    </body>
+        <!--sezione onfo utili-->
+        <section>
+            <h2>Info utili:</h2>
+            <!--lista info utili-->
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong>- Emergenza</li>
+                        <li><strong>101</strong>- Numero polizia</li>
+                        <li><strong>111</strong>- Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel:</strong>Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong>Westmister, London SW 1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di Andata: </strong>Y1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno: </strong>Y1236X, ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+        <hr>
+    </main>
 </body>
 </html>
